@@ -22,7 +22,9 @@ Imports:
     doParallel,
     coda (>= 0.16-1),
     lattice,
-    memisc
+    memisc,
+    broom,
+    tibble
 Suggests:
     doBy,
     car,
@@ -35,4 +37,4 @@ License: GPL (>= 2)
 URL: http://www.bristol.ac.uk/cmm/software/r2mlwin/,https://r-forge.r-project.org/projects/r2mlwin/,http://www.bristol.ac.uk/cmm/software/mlwin/
 SystemRequirements: MLwiN, (OpenBUGS, WinBUGS optional)
 Encoding: UTF-8
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
