@@ -1,5 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(augment,mlwinfitIGLS)
+S3method(augment,mlwinfitMCMC)
 S3method(coef,mlwinfitIGLS)
 S3method(coef,mlwinfitMCMC)
 S3method(deviance,mlwinfitIGLS)
@@ -10,6 +12,8 @@ S3method(formula,mlwinfitIGLS)
 S3method(formula,mlwinfitMCMC)
 S3method(getSummary,mlwinfitIGLS)
 S3method(getSummary,mlwinfitMCMC)
+S3method(glance,mlwinfitIGLS)
+S3method(glance,mlwinfitMCMC)
 S3method(logLik,mlwinfitIGLS)
 S3method(nobs,mlwinfitIGLS)
 S3method(nobs,mlwinfitMCMC)
@@ -23,6 +27,8 @@ S3method(show,mlwinfitIGLS)
 S3method(show,mlwinfitMCMC)
 S3method(summary,mlwinfitIGLS)
 S3method(summary,mlwinfitMCMC)
+S3method(tidy,mlwinfitIGLS)
+S3method(tidy,mlwinfitMCMC)
 S3method(update,mlwinfitIGLS)
 S3method(update,mlwinfitMCMC)
 S3method(vcov,mlwinfitIGLS)
@@ -56,6 +62,9 @@ import(parallel)
 importFrom(Matrix,nnzero)
 importFrom(Matrix,sparseMatrix)
 importFrom(R2WinBUGS,bugs)
+importFrom(broom,augment)
+importFrom(broom,glance)
+importFrom(broom,tidy)
 importFrom(coda,as.mcmc.list)
 importFrom(coda,effectiveSize)
 importFrom(coda,is.mcmc)
@@ -121,6 +130,7 @@ importFrom(stats,update)
 importFrom(stats,var)
 importFrom(stats,vcov)
 importFrom(stats,window)
+importFrom(tibble,tibble)
 importFrom(utils,citation)
 importFrom(utils,read.delim)
 importFrom(utils,stack)
