@@ -1,0 +1,27 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/mlwinfitIGLS.R
+\name{augment.mlwinfitIGLS}
+\alias{augment.mlwinfitIGLS}
+\title{Augment data frame with information derived from the model fit (broom package).}
+\usage{
+\method{augment}{mlwinfitIGLS}(x, data = x@frame, newdata = NULL, ...)
+}
+\arguments{
+\item{x}{An \code{\link{mlwinfitIGLS-class}} model.}
+
+\item{data}{original data onto which columns should be added}
+
+\item{newdata}{new data to predict on, optional}
+
+\item{...}{Other arguments.}
+
+\item{type.predict}{Type of prediction to compute}
+
+\item{type.residuals}{Type of residuals to compute}
+}
+\description{
+Augment data frame with information derived from the model fit (broom package).
+}
+\seealso{
+\code{\link[generics]{augment}}
+}
