@@ -1,0 +1,23 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/mlwinfitMCMC.R
+\name{tidy.mlwinfitMCMC}
+\alias{tidy.mlwinfitMCMC}
+\title{Summarises information about the components of a model from a statistical object (broom package).}
+\usage{
+\method{tidy}{mlwinfitMCMC}(x, conf.int = FALSE, conf.level = 0.95, ...)
+}
+\arguments{
+\item{x}{An \code{\link{mlwinfitMCMC-class}} model.}
+
+\item{conf.int}{should the confidence interval be included?}
+
+\item{conf.level}{confidence interval level}
+
+\item{...}{Other arguments.}
+}
+\description{
+Summarises information about the components of a model from a statistical object (broom package).
+}
+\seealso{
+\code{\link[generics]{tidy}}
+}
